# Dao-3D-Modeling-Agent

./: .gitignore  PERCEPTION.md  README.md  pyproject.toml  verify_agent.py
00-本源_Origin/: 资源探针.py
30-验证_Verify/: _verify_fem.py
50-演示_Demo/: build_coupling.py  build_fastener.py  demo_fem_closure.py
60-实战_Projects/: bolted_flange_stack.py  flanged_coupling.py  full_pipeline.py  gear_reducer_2stage.py
80-智体_Agent/: README.md  test_freecad_integration.py  test_freecad_live.py
80-装配_Assembly/: README.md
cad_agent/: README.md  __init__.py  capability.py  capability_map.json  docformat.py  mcp_server.py  planner.py  recipes.py  session.py  tools.py
docs/: app.js  index.html  kin.js
examples/: build_demo.py  demo_closure.py  render_fcstd.py
practice/: blade_practice.py  bracket_practice.py  flange_practice.py  gearbox_practice.py  pipeskid_practice.py  reducer_practice.py
scripts/: install_addon.ps1
tests/: _gearmath.py  conftest.py  smoke_advanced.py  smoke_asm.py  smoke_asm_massprops.py  smoke_bevel.py  smoke_bim.py  smoke_boolean_fillet_guards.py  smoke_bop.py  smoke_buckling.py  smoke_cam.py  smoke_cam_profile.py  smoke_capability.py  smoke_clearance.py  smoke_complex.py  smoke_compose.py  smoke_curvature.py  smoke_design_intent.py  smoke_dfm_housing.py  smoke_dfm_report.py  smoke_docformat.py  smoke_draft.py  smoke_drawing.py  smoke_engine.py  smoke_engineering.py  smoke_epicyclic.py  smoke_export_selector.py  smoke_fatigue.py  smoke_fem.py  smoke_fem_guard.py  smoke_fourbar.py  smoke_gear_fem.py  smoke_gearbox.py  smoke_geartrain.py  smoke_gui.py  (+55 more)
(+240 files in other folders)
