[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dao-freecad-agent"
version = "1.0.0"
description = "Deep, closed-loop FreeCAD integration: a live kernel + uniform tool/MCP surface (solid/param/asm/perceive/analyze) for agentic CAD."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LGPL-2.1" }
authors = [{ name = "DAO" }]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
dao-freecad-mcp = "cad_agent.mcp_server:main"

[tool.setuptools]
packages = ["cad_agent", "cad_agent.backends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
